--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2012-11-15 Thomas Scheibitz  <mail@kreativschmiede-eichsfeld.de>
+	- 0.2.2
+
+	* set the js in typoscript
+	* added htmlentities
+
+
+2012-08-10 Thomas Scheibitz  <mail@kreativschmiede-eichsfeld.de>
+	- 0.2.1
+
+	* fixed page typenum error
+
+
 2012-08-09 Thomas Scheibitz  <mail@kreativschmiede-eichsfeld.de>
 	- 0.2.0
 
