add docu bugfixed mysql query
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/st_address_map/trunk@71184 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2013-02-13 Thomas Scheibitz  <mail@kreativschmiede-eichsfeld.de>
+	- 0.3.0
+
+	* removed error - No thumbnails in the backend http://forge.typo3.org/issues/45465
+	* add docu
+	* set depends now on TYPO3 and tt_address
+	* bugfixed mysql query
+
 2012-11-15 Thomas Scheibitz  <mail@kreativschmiede-eichsfeld.de>
 	- 0.2.2
 
